chore(security): 数据库密码改由环境变量/.env 提供并同步文档
- 新增 com.cashier.util.DotEnv：读取/维护工作目录 .env（忽略注释、去引号、
  重复键取首条；写入时保留其它键并把权限收到 rw-------）。
  DatabaseManager.resolveDatabasePassword 与 DatabaseConnectionHelper
  改为"进程环境变量 → .env → 配置文件"，因此直接 java -jar（不经过启动脚本）
  也能用同一份配置
- 四条会生成 config/database.properties 的通道不再写入密码（任何环境都留空）：
  DatabaseConfigDialog、Installer.createConfigFiles、install.sh、
  docker/docker-init.sh；开发模式改写 .env。此前开发模式会把明文密码写进
  配置文件，导致 release.bat/release.sh 的 db.password 门禁在装了库的机器上必然失败
- 门禁升级：PerformancePolicyTest 断言任何模式都不得把密码拼进 config/，
  并逐个扫描上述四条通道，出现 db.password=${...} / db.password=%s 即失败
- 文档同步：三份 README 修正"install.sh 仅在检测到 .env 时不写密码"的旧说法、
  补充取值顺序与故障排除；GO_LIVE_CHECKLIST/MYSQL_SETUP 去掉"填写真实密码"
  与示例密码；DATABASE_VERSIONS 文件清单补齐缺失脚本
- 本机约定：密码放根目录 .env（已 gitignore），config/database.properties 的
  db.password 留空